assets/css/style.css
    html { scroll-behavior: smooth; }
    h1, h2 { background-image: linear-gradient(to bottom, #FFFFFF, #999999); -webkit-background-clip: text; background-clip: text; color: transparent; }
    h1 { font-size: 80px; font-weight: 300; line-height: 150%; }
    h2 { font-size: 42px; font-weight: 500; line-height: 150%; margin: 0; }
    p { color: #ACACAC; font-size: 16px; font-weight: 400; line-height: 150%; margin: 0; }

    body { margin: 0; font-family: 'Poppins'; }
    header { padding: 16px 16px 0 16px; min-height: 1000px; background-image: url(../images/main-bg.webp); background-size: cover; background-repeat: no-repeat; background-position: center; position: relative; }
    .header-top { margin: 0 auto; display: flex; gap: 130px; border: 1px solid #FFFFFF14; padding: 8px; border-radius: 16px; width: fit-content; align-items: center; backdrop-filter: blur(4px); background-color: #01051033; }
    .logo { width: 134px; height: auto; }
    nav ul { display: flex; gap: 20px; list-style: none; }
    nav ul li a { font-size: 16px; font-weight: 500; color: #ffffff; text-decoration: none; transition: .25s; }
    nav ul li a:hover { opacity: .75; }
    .header-button { display: block; background-color: #fff; font-size: 16px; font-weight: 600; color: #404040; border-radius: 10px; padding: 16px 24px; text-decoration: none; transition: .25s; border: 1px solid #FFFFFF14; }
    .header-button:hover { opacity: .85; }
    .header-title { margin-top: 180px; text-align: center; margin-bottom: 0; }
    .header-description { max-width: 740px; margin: 0 auto; color: #ACACAC; font-size: 20px; font-weight: 400; line-height: 150%; text-align: center; }
    .header-description span { color: #fff; font-weight: 500; }
    .header-buttons { display: flex; gap: 16px; margin-top: 64px; justify-content: center; }
    .header-button-gradient { font-weight: 500; background: linear-gradient(95.55deg, #622CD5 -25.5%, #D52C2F 171.12%); box-shadow: 0 0 15.52px 0 #714EBD inset; backdrop-filter: blur(25px); border: none; color: #fff; display: flex; align-items: center; gap: 8px; transition: .25s; }
    .header-button-gradient:hover { background: linear-gradient(95.55deg, #D52C2F -25.5%, #622CD5 171.12%); opacity: 1; }
    .header-button-gradient svg { margin-right: 5px; margin-left: 0; transition: .25s; }
    .header-button-gradient:hover svg { margin-left: 5px; margin-right: 0; }
    .header-button-black { padding: 14px 40px; background: #010510; color: #fff; position: relative; }
    .header-button-black:before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; border-radius: 10px; padding: 1px;  background: linear-gradient(90deg, #714EBD 0%, #342457 100%); -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); -webkit-mask-composite: destination-out; mask-composite: exclude; pointer-events: none; z-index: 1; }
    .header-bottom { height: 650px; background-image: url(../images/header-bottom.webp); background-size: 850px; background-repeat: no-repeat; background-position: top 50px center; position: relative; }
    .header-bottom:after { content: ''; position: absolute; left: -16px; bottom: 0; height: 500px; width: calc(100% + 32px); background-image: linear-gradient(to bottom, transparent 30%, #070A13 70%); }

    .container { background-color: #070A13; padding: 0 16px; padding-bottom: 500px; position: relative; }
    .blur-section { display: flex; flex-direction: column; justify-content: space-between; border: 2px solid #FFFFFF14; border-radius: 16px; position: relative; overflow: hidden; background-color: #FFFFFF0F; padding: 40px; }
    .blur-section:before { content: ''; position: absolute; width: 100%; height: 140%; left: -30%; bottom: -40%; opacity: .2; border-radius: 100%; background: conic-gradient(from 180deg at 50% 50%, #D52C2F 0deg, #33176F 360deg), #D9D9D9; filter: blur(65px); transform: rotate(25deg); }
    .blur-section:after { content: ''; position: absolute; width: 50%; height: 100%; right: -20%; top: -20%; opacity: .4; border-radius: 100%; background: conic-gradient(from 180deg at 50% 50%, #622CD5 0deg, #33176F 360deg); filter: blur(65px); transform: rotate(35deg); }
    
    .one-section { height: 272px; max-width: 1192px; width: calc(100% - 88px); margin: 0 auto; }
    .one-section p { max-width: 340px; }
    .one-section .section-element { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-image: url(../images/section-one.webp); background-size: 550px; background-repeat: no-repeat; background-position: right -30px bottom -95px; z-index: 1; }
    
    .main-sections { display: flex; gap: 24px; width: 100%; max-width: 1280px; margin: 0 auto; }
    .main-sections-left { width: 100%; }
    .main-sections-right { width: 430px; min-width: 430px; }
    
    .two-section { margin-top: 24px; height: 162px; padding-right: 130px; }
    .two-section .section-element { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-image: url(../images/section-two.webp); background-size: 250px; background-repeat: no-repeat; background-position: right -70px top -30px; z-index: 1; }
    
    .three-section { margin-top: 24px; height: 162px; padding-right: 150px; }
    .three-section .section-element { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-image: url(../images/section-three.webp); background-size: 250px; background-repeat: no-repeat; background-position: right -70px top 0px; z-index: 1; }
    
    .four-section { display: flex; flex-direction: column; align-items: center; justify-content: center; flex-wrap: wrap; gap: 32px; padding: 33px; background-image: url(../images/section-four.webp); background-size: cover; background-position: center; background-repeat: no-repeat; border-radius: 16px; margin-top: 24px; height: calc(100% - 96px); border: 2px solid #FFFFFF14; }
    .four-section img { width: 230px; height: auto; }
    .four-section p { text-align: center; }
/* ... */

